Did some reordering

--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,10 @@
                 <li class="dropdownLinks"><a href="map.html">Map API</a></li>
             </ul>
         </nav>
+        <div>
+            The following is a rundown of my resume. If you'd like to download a copy
+            of your own, you can follow <a href="/media/Resume_PCrowe_2021.pdf" download>this link.</a>
+        </div>
         <header id="resume">
             <h1>Patrick Crowe</h1>
             <em>pcrowe@hawk.iit.edu | pcrowe.post@gmail.com | (630)-841-8896</em>
@@ -64,119 +68,26 @@
         </main>
         <div class="defaultDiv">
             <h2 class="official"><em>Employment</em></h2>
-            <table>
-                <tr>
-                    <th>Company</th>
-                    <th>Position</th>
-                    <th>Time of Employment</th>
-                    <th>Location</th>
-                </tr>
-                <tr>
-                    <td>Pinstripes</td>
-                    <td>Server Assistant</td>
-                    <td>Sept 2019-Present</td>
-                    <td>Chicago, IL</td>
-                </tr>
-                <tr>
-                    <td>Capri of Downers Grove</td>
-                    <td>Host/Bus Boy</td>
-                    <td>May 2019-Aug 2019</td>
-                    <td>Downers Grove, IL</td>
-                </tr>
-                <tr>
-                    <td>South Dining Hall</td>
-                    <td>Kitchen Worker</td>
-                    <td>Aug 2018-May 2019</td>
-                    <td>Notre Dame, IN</td>
-                </tr>
-                <tr>
-                    <td>That Burger Joint</td>
-                    <td>Kitchen Worker,Cashier</td>
-                    <td>May 2018-Jan 2019</td>
-                    <td>Downers Grove, IL</td>
-                </tr>
-            </table>
-        </div>
-        <div class="defaultDiv">
-            <h2 class="official"><em>Experience</em></h2>
-            <table>
-                <tr>
-                    <th>Introduction to Engineering Systems 1</th>
-                    <td>----</td>
-                    <td>Notre Dame, IN</td>
-                </tr>
-                <tr>
-                    <td><em>Controlled Descent Project, Team member</em></td>
-                    <td>----</td>
-                    <td>Aug-Nov 2018</td>
-                </tr>
-            </table>
+            <h3>Argonne National Lab</h3>
+            <h4>Research Aide, June 2020-Present</h4>
             <ul>
-                <li>Designed functional parachute device</li>
-                <li>Organized meetings with group members</li>
-                <li>Delivered clear report on device's functionality, including Excel charts and tables</li>
+                <li>Creates and implements stories in an Agile environment under a 2-week sprint deadline</li>
+                <li>Researches and works in Drupal for a team of 7 developers to update the public and private website</li>
+                <li>Demoed PHP code at group meetings after pushing to Gitlab and writing Behat/Cucumber tests</li>
             </ul>
-            <table><tr><th><em>Iterative Design Project, Team member</em></th></tr></table>
+            <h3>Capri of Downers Grove</h3>
+            <h4>Host/Busboy, May 2019-August 2019</h4>
             <ul>
-                <li>Drafted designs of picture frame with Solidworks software</li>
+                <li>Scheduled reservations for up to 50 parties at a time, restaurant capacity at 200 people indoors and outdoors</li>
+                <li>Welcomed on average 20 guests per hour in a friendly and helpful manner while seating them in under 1 minute</li>
+                <li>Managed dining room and reset tables in under 2 minutes for guests to quickly be seated</li>
             </ul>
-            <table>
-                <tr>
-                    <th>Personal Website</th>
-                    <td>----</td>
-                    <td>Oct 2018-Present</td>
-                </tr>
-            </table>
+            <h3>That Burger Joint/Oberweis</h3>
+            <h4>Kitchen Worker/Cashier, May 2018-January 2019</h4>
             <ul>
-                <li>Coded with HTML, CSS, JavaScript, and jQuery</li>
-                <li>Contains personal writing projects and code experiments</li>
-                <li><a href="https://pcrowe22.github.io/Bibliotech/index.html">Link</a></li>
+                <li>Politely took orders and served customers in under 7 minutes, cleaned kitchen and dining room</li>
+                <li>Collaborated well in a team of 5 or less under pressure</li>
             </ul>
-            <table>
-                <tr>
-                    <th>Introduction to Engineering Systems 2</th>
-                    <td>----</td>
-                    <td>Jan-May 2019</td>
-                </tr>
-            </table>
-            <ul>
-                <li>Coded in MATLAB for mathematical simulations</li>
-                <li>Created intelligent database-sorting software with team</li>
-            </ul>
-            <table><tr><th><strong>Embedded Systems and the Internet of Things</strong></th></tr></table>
-            <ul>
-                <li>Physical wiring and digital programming with Arduino and C language</li>
-                <li>Built a simple electric piano using push buttons, LEDs, and piezos</li>
-            </ul>
-            <table>
-                <tr>
-                    <th>Advanced Introduction to Computer Science</th>
-                    <td>----</td>
-                    <td>Illinois Tech, IL</td>
-                </tr>
-                <tr>
-                    <td>
-                        <ul>
-                            <li>Practice with Java in Eclipse and GitHub</li>
-                        </ul>
-                    </td>
-                    <td>----</td>
-                    <td>Aug-Dec 2019</td>
-                </tr>
-            </table>
-            <table><tr><th><strong>Fundamentals of Web Design</strong></th></tr></table>
-            <ul>
-                <li>Practice with HTML, CSS, and JavaScript in Notepad+ and GitHub</li>
-            </ul>
-            <p><strong>CompTIA A+</strong></p>
-            <p><em>Online Course Completed</em></p>
-            <p>Simple hardware knowledge</p>
-            <p><strong>CompTIA Linux+</strong></p>
-            <p><em>Online Course Completed</em></p>
-            <p>Basic Linux knowledge</p>
-            <p><strong>CompTIA Network+</strong></p>
-            <p><em>Online Course Completed</em></p>
-            <p>Basic computer network and security knowledge</p>
         </div>
         <div class="defaultDiv">
             <h2 class="official"><em>Classes</em></h2>
@@ -332,6 +243,18 @@
                     <td>Software Development</td>
                 </tr>
             </table>
+        </div>
+        <div>
+            <h2>Skills</h2>
+            <p><strong>CompTIA A+</strong></p>
+            <p><em>Online Course Completed</em></p>
+            <p>Simple hardware knowledge</p>
+            <p><strong>CompTIA Linux+</strong></p>
+            <p><em>Online Course Completed</em></p>
+            <p>Basic Linux knowledge</p>
+            <p><strong>CompTIA Network+</strong></p>
+            <p><em>Online Course Completed</em></p>
+            <p>Basic computer network and security knowledge</p>
         </div>
         <div class="defaultDiv">
             <h2 class="official"><em>Activities</em></h2>
