changed img href to src

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
      <p>Safe travels, adventurer.</p>
   </main>
   <aside>
-      <figure><img href="/media/Chicago.JPG" /></figure>
-      <figure><img href="/media/Fall.JPG" /></figure>
-      <figure><img href="fav albums 6-10-21.png" /></figure>
-      <figure><img href="L.JPG" /></figure>
-      <figure><img href="P1.JPG" /></figure>
-      <figure><img href="P2.JPG" /></figure>
-      <figure><img href="Pup.jpg" /></figure>
+      <figure><img src="/media/Chicago.JPG" /></figure>
+      <figure><img src="/media/Fall.JPG" /></figure>
+      <figure><img src="fav albums 6-10-21.png" /></figure>
+      <figure><img src="L.JPG" /></figure>
+      <figure><img src="P1.JPG" /></figure>
+      <figure><img src="P2.JPG" /></figure>
+      <figure><img src="Pup.jpg" /></figure>
   </aside>
 </body>
 </html>
