Changed src path

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
      <p>Safe travels, adventurer.</p>
   </main>
   <aside>
-      <figure><img src="/media/Chicago.JPG" /></figure>
-      <figure><img src="/media/Fall.JPG" /></figure>
-      <figure><img src="fav albums 6-10-21.png" /></figure>
-      <figure><img src="L.JPG" /></figure>
-      <figure><img src="P1.JPG" /></figure>
-      <figure><img src="P2.JPG" /></figure>
-      <figure><img src="Pup.jpg" /></figure>
+      <figure><img src="/home/media/Chicago.JPG" /></figure>
+      <figure><img src="/home/media/Fall.JPG" /></figure>
+      <figure><img src="/home/media/fav albums 6-10-21.png" /></figure>
+      <figure><img src="/home/media/L.JPG" /></figure>
+      <figure><img src="/home/media/P1.JPG" /></figure>
+      <figure><img src="/home/media/P2.JPG" /></figure>
+      <figure><img src="/home/media/Pup.jpg" /></figure>
   </aside>
 </body>
 </html>
