--- a/resume.html
+++ b/resume.html
@@ -246,61 +246,42 @@
         </div>
         <div>
             <h2>Skills</h2>
-            <p><strong>CompTIA A+</strong></p>
-            <p><em>Online Course Completed</em></p>
-            <p>Simple hardware knowledge</p>
-            <p><strong>CompTIA Linux+</strong></p>
-            <p><em>Online Course Completed</em></p>
-            <p>Basic Linux knowledge</p>
-            <p><strong>CompTIA Network+</strong></p>
-            <p><em>Online Course Completed</em></p>
-            <p>Basic computer network and security knowledge</p>
-        </div>
-        <div class="defaultDiv">
-            <h2 class="official"><em>Activities</em></h2>
-            <table>
-                <tr>
-                    <th>Specialty</th>
-                    <th>Organization</th>
-                    <th>Time Period</th>
-                </tr>
-                <tr>
-                    <td><em>Hardware</em></td>
-                    <td>HAM Radio</td>
-                    <td>Sept 2019-Present</td>
-                </tr>
-                <tr>
-                    <td><em>Cybersecurity</em></td>
-                    <td>Cyber Hawks</td>
-                    <td>Aug 2019-Present</td>
-                </tr>
-                <tr>
-                    <td><em>Programer</em></td>
-                    <td>Free time</td>
-                    <td>2018-Present</td>
-                </tr>
-                <tr>
-                    <td><em>Leader</em></td>
-                    <td>Muse Club</td>
-                    <td>Aug 2014-2018</td>
-                </tr>
-            </table>
-        </div>
-        <div class="block">
-            <h2 class="heavySharp"><em>Skills</em></h2>
             <ul>
+                <li>Bash</li>
                 <li>Microsoft Office</li>
-                <li>Solidworks</li>
-                <li>Vernier Graphical Analysis</li>
                 <li>MATLAB</li>
                 <li>Java</li>
                 <li>Python</li>
                 <li>C</li>
+                <li>C#></li>
+                <li>C++</li>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
                 <li>jQuery</li>
+                <li>JSON</li>
                 <li>GitHub</li>
+                <li>SQL</li>
+                <li>OCaml></li>
+                <li>Cucumber</li>
+                <li>PHP</li>
+                <li>XML</li>
+                <li>Swift</li>
+            </ul>
+            <ul>
+                <li>Linux/Windows/Mac</li>
+                <li>XCode</li>
+                <li>Android Studio</li>
+                <li>Visual Studio</li>
+                <li>Docker</li>
+                <li>Drupal framework</li>
+                <li>Service Now</li>
+                <li>Jetbrains</li>
+            </ul>
+            <ul>
+                <li>CompTIA A+</li>
+                <li>CompTIA Linux+</li>
+                <li>CompTIA Network+</li>
             </ul>
         </div>
     </div>
