--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,7 @@
                 <li class="dropdownLinks"><a href="/home">Home</a></li>
                 <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
                 <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
-                <li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
-                <li class="dropdownLinks"><a href="hobbies.html">Hobbies</a></li>
-                <li class="dropdownLinks"><a href="map.html">Map API</a></li>
+                <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
             </ul>
         </nav>
         <div>
