float skill list

--- a/resume.html
+++ b/resume.html
@@ -244,43 +244,49 @@
         </div>
         <div>
             <h2>Skills</h2>
-            <ul>
-                <li>Bash</li>
-                <li>Microsoft Office</li>
-                <li>MATLAB</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>C</li>
-                <li>C#></li>
-                <li>C++</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>jQuery</li>
-                <li>JSON</li>
-                <li>GitHub</li>
-                <li>SQL</li>
-                <li>OCaml></li>
-                <li>Cucumber</li>
-                <li>PHP</li>
-                <li>XML</li>
-                <li>Swift</li>
-            </ul>
-            <ul>
-                <li>Linux/Windows/Mac</li>
-                <li>XCode</li>
-                <li>Android Studio</li>
-                <li>Visual Studio</li>
-                <li>Docker</li>
-                <li>Drupal framework</li>
-                <li>Service Now</li>
-                <li>Jetbrains</li>
-            </ul>
-            <ul>
-                <li>CompTIA A+</li>
-                <li>CompTIA Linux+</li>
-                <li>CompTIA Network+</li>
-            </ul>
+            <div class="skillList">
+                <ul>
+                    <li>Bash</li>
+                    <li>Microsoft Office</li>
+                    <li>MATLAB</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>C</li>
+                    <li>C#></li>
+                    <li>C++</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>jQuery</li>
+                    <li>JSON</li>
+                    <li>GitHub</li>
+                    <li>SQL</li>
+                    <li>OCaml></li>
+                    <li>Cucumber</li>
+                    <li>PHP</li>
+                    <li>XML</li>
+                    <li>Swift</li>
+                </ul>
+            </div>
+            <div class="skillList">
+                <ul>
+                    <li>Linux/Windows/Mac</li>
+                    <li>XCode</li>
+                    <li>Android Studio</li>
+                    <li>Visual Studio</li>
+                    <li>Docker</li>
+                    <li>Drupal framework</li>
+                    <li>Service Now</li>
+                    <li>Jetbrains</li>
+                </ul>
+            </div>
+            <div class="skillList">
+                <ul>
+                    <li>CompTIA A+</li>
+                    <li>CompTIA Linux+</li>
+                    <li>CompTIA Network+</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
