added image class to imgs

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
      <p>Safe travels, adventurer.</p>
   </main>
   <aside>
-      <figure><img src="/home/media/Chicago.JPG" /></figure>
-      <figure><img src="/home/media/Fall.JPG" /></figure>
-      <figure><img src="/home/media/fav albums 6-10-21.png" /></figure>
-      <figure><img src="/home/media/L.JPG" /></figure>
-      <figure><img src="/home/media/P1.JPG" /></figure>
-      <figure><img src="/home/media/P2.JPG" /></figure>
-      <figure><img src="/home/media/Pup.jpg" /></figure>
+      <figure><img src="/home/media/Chicago.JPG" class="pic"/></figure>
+      <figure><img src="/home/media/Fall.JPG" class="pic"/></figure>
+      <figure><img src="/home/media/fav albums 6-10-21.png" class="pic"/></figure>
+      <figure><img src="/home/media/L.JPG" class="pic"/></figure>
+      <figure><img src="/home/media/P1.JPG" class="pic"/></figure>
+      <figure><img src="/home/media/P2.JPG" class="pic"/></figure>
+      <figure><img src="/home/media/Pup.jpg" class="pic"/></figure>
   </aside>
 </body>
 </html>
