--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
       <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>>
     </ul>
   </nav>
-  <header id="intro">
-    <h1>Home</h1>
-    <p>Patrick Crowe</p>
-    <p>25% Music Fan</p>
-    <p>25% Tech Wizard</p>
-    <p>25% Interior Gardener</p>
-    <p>25% Internet Literature Detective</p>
-    <p>100% Coder</p>
+    <header id="intro">
+        <h1>Home</h1>
+        <p>Patrick Crowe</p>
+        <p>25% Music Fan</p>
+        <p>25% Tech Wizard</p>
+        <p>25% Interior Gardener</p>
+        <p>25% Internet Literature Detective</p>
+        <p>100% Coder</p>
+        <figure><img src="../media/piechart.png" id="piechart"/></figure>
   </header>
 
   <hr>
