Gave aside an id

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       explored. Like I said, I'm part internet literature detective, so I've seen some pretty crazy stuff out there while exploring.</p>
      <p>Safe travels, adventurer.</p>
   </main>
-  <aside>
+  <aside id="collage">
       <figure><img src="/home/media/Chicago.JPG" class="pic"/></figure>
       <figure><img src="/home/media/Fall.JPG" class="pic"/></figure>
       <figure><img src="/home/media/fav albums 6-10-21.png" class="pic"/></figure>
