Added default styling to every page

--- a/favorites.html
+++ b/favorites.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="javascript/script.js"></script>
 </head>
-<body id="home">
+<body class="defaultBody">
   <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
@@ -29,7 +29,7 @@
   </header>
 
   <hr>
-    <main id="homeBody">
+    <main class="defaultBody">
         <div>
             <h1>Reading</h1>
             <h2>Books</h2>
