--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="javascript/script.js"></script>
 </head>
-<body id="home">
+<body class="default">
   <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
@@ -32,7 +32,7 @@
   </header>
 
   <hr>
-  <main id="homeBody">
+  <main class="defaultBody">
     <h1>Take off your shoes, stay a while!</h1>
     <p>I want my site to be like a library, somewhere you can find exactly what you're looking for while still giving you 
       the freedom to get lost in the stacks. Along the top are buttons to help you navigate to specific items you may be
