--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="javascript/script.js"></script>
 </head>
-<body id="home">
+<body class="default">
   <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
@@ -26,7 +26,7 @@
   </header>
 
   <hr>
-  <main id="projectsBody">
+  <main class="defaultBody">
     <h2>MATLAB</h2>
     <p>Though I did some programming in MATLAB my freshman year, I do not regularly use it now.</p>
     <p>I did, however, develop some pretty cool interactive charts for calculating student loan debt and investment options.
