--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
     <script src="javascript/script.js"></script>
 </head>
-<body>
+<body class="default">
     <div id="wrapper">
         <nav class="dropdownNav">
             <ul id="linkListHolder">
@@ -31,7 +31,7 @@
         </header>
 
         <hr>
-        <main class="heavySharp" id="dottedBox">
+        <main class="defaultBody" id="dottedBox">
             <h2 class="official"><em>Education</em></h2>
             <div>
                 <h3>Illinois Institute of Technology</h3>
@@ -64,7 +64,7 @@
                 </table>
             </div>
         </main>
-        <div class="defaultDiv">
+        <div class="defaultBody">
             <h2 class="official"><em>Employment</em></h2>
             <h3>Argonne National Lab</h3>
             <h4>Research Aide, June 2020-Present</h4>
@@ -87,7 +87,7 @@
                 <li>Collaborated well in a team of 5 or less under pressure</li>
             </ul>
         </div>
-        <div class="defaultDiv">
+        <div class="defaultBody">
             <h2 class="official"><em>Classes</em></h2>
             <table>
                 <tr>
@@ -242,7 +242,7 @@
                 </tr>
             </table>
         </div>
-        <div>
+        <div class="defaultBody">
             <h2>Skills</h2>
             <div class="skillList">
                 <ul>
