Added picture styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li class="dropdownLinks"><a href="/home">Home</a></li>
       <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
       <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
-      <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>>
+      <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
     </ul>
   </nav>
     <header id="intro">
@@ -28,7 +28,7 @@
         <p>25% Interior Gardener</p>
         <p>25% Internet Literature Detective</p>
         <p>100% Coder</p>
-        <figure><img src="../media/piechart.png" id="piechart"/></figure>
+        <figure><img src="/home/media/piechart.png" id="piechart"/></figure>
   </header>
 
   <hr>
@@ -42,13 +42,13 @@
      <p>Safe travels, adventurer.</p>
   </main>
   <aside id="collage">
-      <figure><img src="/home/media/Chicago.JPG" class="pic"/></figure>
-      <figure><img src="/home/media/Fall.JPG" class="pic"/></figure>
-      <figure><img src="/home/media/fav albums 6-10-21.png" class="pic"/></figure>
-      <figure><img src="/home/media/L.JPG" class="pic"/></figure>
-      <figure><img src="/home/media/P1.JPG" class="pic"/></figure>
-      <figure><img src="/home/media/P2.JPG" class="pic"/></figure>
-      <figure><img src="/home/media/Pup.jpg" class="pic"/></figure>
+      <figure><img src="/home/media/Chicago.JPG" id="chicago"/></figure>
+      <figure><img src="/home/media/Fall.JPG" id="fall"/></figure>
+      <figure><img src="/home/media/fav albums 6-10-21.png" id="albums"/></figure>
+      <figure><img src="/home/media/L.JPG" id="station"/></figure>
+      <figure><img src="/home/media/P1.JPG" id="p1"/></figure>
+      <figure><img src="/home/media/P2.JPG" id="p2"/></figure>
+      <figure><img src="/home/media/Pup.jpg" id="pup"/></figure>
   </aside>
 </body>
 </html>
