--- a/favorites.html
+++ b/favorites.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="javascript/script.js"></script>
 </head>
-<body class="defaultBody">
+<body class="default">
   <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
@@ -20,7 +20,7 @@
       <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>>
     </ul>
   </nav>
-  <header id="favoritesHeader">
+  <header class="defaultBody" id="favoritesHeader">
     <h1>Top Tier Media</h1>
     <p>I've created a ton of stuff in my lifetime, but I've also consumed probably ten times as much.
         Here I'd like to compile a list of all the media I've experienced, will experience, and am 
@@ -54,5 +54,6 @@
       <figure><img src="/home/media/P2.JPG" /></figure>
       <figure><img src="/home/media/Pup.jpg" /></figure>
   </aside>
+  </div>
 </body>
 </html>
