--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
     </ul>
   </nav>
-    <header id="intro">
+    <header class="defaultBody" id="intro">
         <h1>Home</h1>
         <p>Patrick Crowe</p>
         <p>25% Music Fan</p>
@@ -50,5 +50,6 @@
       <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
       <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
   </aside>
+    </div>
 </body>
 </html>
