--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
       <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
     </ul>
   </nav>
-  <header id="projectHeader">
+  <header class="defaultBody" id="projectHeader">
     <h1>Projects</h1>
     <p>Looking for software I've written? Check out some of the download links below!</p>
   </header>
@@ -90,5 +90,6 @@
       project for years so I likely won't have a link for you to download the package directly from me, but in some short years I may
       have a repository I can link you to so that you can see the work me and the students at IIT have accomplished. Updates to come!</p>
   </main>
+  </div>
 </body>
 </html>
