--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
             The following is a rundown of my resume. If you'd like to download a copy
             of your own, you can follow <a href="/media/Resume_PCrowe_2021.pdf" download>this link.</a>
         </div>
-        <header id="resume">
+        <header class="defaultBody" id="resume">
             <h1>Patrick Crowe</h1>
             <em>pcrowe@hawk.iit.edu | pcrowe.post@gmail.com | (630)-841-8896</em>
             <em><a href="github.com/pcrowe22">github.com/pcrowe22</a></em>
