Made a second collage

--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
       explored. Like I said, I'm part internet literature detective, so I've seen some pretty crazy stuff out there while exploring.</p>
      <p>Safe travels, adventurer.</p>
   </main>
-  <aside id="collage">
+  <aside class="collage" id="leftCollage">
       <figure><img src="/home/media/Chicago.JPG" id="chicago" /></figure>
       <figure><img src="/home/media/P1.JPG" id="p1" /></figure>
       <figure><img src="/home/media/fav albums 6-10-21.png" id="albums" /></figure>
-      <figure><img src="/home/media/L.JPG" id="station" /></figure>
       <figure><img src="/home/media/Fall.JPG" id="fall" /></figure>
       <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
+  </aside>
+  <aside class="collage" id="rightCollage">
+      <figure><img src="/home/media/L.JPG" id="station" /></figure>
       <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
   </aside>
-    </div>
+  </div>
 </body>
 </html>
