Pulled figure out of intro

--- a/favorites.html
+++ b/favorites.html
@@ -17,7 +17,7 @@
       <li class="dropdownLinks"><a href="/home">Home</a></li>
       <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
       <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
-      <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>>
+      <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
     </ul>
   </nav>
   <header class="defaultBody" id="favoritesHeader">
