--- a/index.html
+++ b/index.html
@@ -11,48 +11,49 @@
   <script src="javascript/script.js"></script>
 </head>
 <body class="default">
-  <div id="wrapper">
-  <nav class="dropdownNav">
-    <ul id="linkListHolder">
-      <li class="dropdownLinks"><a href="/home">Home</a></li>
-      <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
-      <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
-      <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
-    </ul>
-  </nav>
-    <header class="defaultBody" id="intro">
-        <h1>Home</h1>
-        <p>Patrick Crowe</p>
-        <p>25% Music Fan</p>
-        <p>25% Tech Wizard</p>
-        <p>25% Interior Gardener</p>
-        <p>25% Internet Literature Detective</p>
-        <p>100% Coder</p>
-        <figure><img src="/home/media/piechart.png" id="piechart"/></figure>
-  </header>
+    <div id="wrapper">
+        <nav class="dropdownNav">
+            <ul id="linkListHolder">
+                <li class="dropdownLinks"><a href="/home">Home</a></li>
+                <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
+                <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
+                <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
+            </ul>
+        </nav>
+        <header class="defaultBody" id="intro">
+            <h1>Home</h1>
+            <p>Patrick Crowe</p>
+            <p>25% Music Fan</p>
+            <p>25% Tech Wizard</p>
+            <p>25% Interior Gardener</p>
+            <p>25% Internet Literature Detective</p>
+            <p>100% Coder</p>
+        </header>
+        <figure><img src="/home/media/piechart.png" id="piechart" /></figure>
+        <hr>
+        <main class="defaultBody">
+            <h1>Take off your shoes, stay a while!</h1>
+            <p>
+                I want my site to be like a library, somewhere you can find exactly what you're looking for while still giving you
+                the freedom to get lost in the stacks. Along the top are buttons to help you navigate to specific items you may be
+                looking for, like my resume and projects. I also like to keep lists of goals, accomplishments, and favorites which you
+                can find among the other links up there. Ultimately, I hope this can be a fun site like some of the other places I've
+                explored. Like I said, I'm part internet literature detective, so I've seen some pretty crazy stuff out there while exploring.
+            </p>
+            <p>Safe travels, adventurer.</p>
+        </main>
+        <aside class="collage" id="leftCollage">
+            <figure><img src="/home/media/Chicago.JPG" id="chicago" /></figure>
+            <figure><img src="/home/media/P1.JPG" id="p1" /></figure>
+            <figure><img src="/home/media/fav albums 6-10-21.png" id="albums" /></figure>
+            <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
+        </aside>
+        <aside class="collage" id="rightCollage">
+            <figure><img src="/home/media/Fall.JPG" id="fall" /></figure>
+            <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
+            <figure><img src="/home/media/L.JPG" id="station" /></figure>
 
-  <hr>
-  <main class="defaultBody">
-    <h1>Take off your shoes, stay a while!</h1>
-    <p>I want my site to be like a library, somewhere you can find exactly what you're looking for while still giving you 
-      the freedom to get lost in the stacks. Along the top are buttons to help you navigate to specific items you may be
-      looking for, like my resume and projects. I also like to keep lists of goals, accomplishments, and favorites which you
-      can find among the other links up there. Ultimately, I hope this can be a fun site like some of the other places I've
-      explored. Like I said, I'm part internet literature detective, so I've seen some pretty crazy stuff out there while exploring.</p>
-     <p>Safe travels, adventurer.</p>
-  </main>
-  <aside class="collage" id="leftCollage">
-      <figure><img src="/home/media/Chicago.JPG" id="chicago" /></figure>
-      <figure><img src="/home/media/P1.JPG" id="p1" /></figure>
-      <figure><img src="/home/media/fav albums 6-10-21.png" id="albums" /></figure>
-      <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
-  </aside>
-  <aside class="collage" id="rightCollage">
-      <figure><img src="/home/media/Fall.JPG" id="fall" /></figure>
-      <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
-      <figure><img src="/home/media/L.JPG" id="station" /></figure>
-
-  </aside>
-  </div>
+        </aside>
+    </div>
 </body>
 </html>
