--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
                 <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
             </ul>
         </nav>
-        <header class="defaultBody" id="intro">
-            <h1>Home</h1>
-            <p>Patrick Crowe</p>
-            <p>25% Music Fan</p>
-            <p>25% Tech Wizard</p>
-            <p>25% Interior Gardener</p>
-            <p>25% Internet Literature Detective</p>
-            <p>100% Coder</p>
+        <header class="defaultBody">
+            <div id="intro">
+                <h1>Home</h1>
+                <p>Patrick Crowe</p>
+                <p>25% Music Fan</p>
+                <p>25% Tech Wizard</p>
+                <p>25% Interior Gardener</p>
+                <p>25% Internet Literature Detective</p>
+                <p>100% Coder</p>
+            </div>
+            
+            <figure><img src="/home/media/piechart.png" id="piechart" /></figure>
         </header>
-        <figure><img src="/home/media/piechart.png" id="piechart" /></figure>
+        
         <hr>
         <main class="defaultBody">
             <h1>Take off your shoes, stay a while!</h1>
