--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
         
         <hr>
-        <main class="defaultBody">
+        <main class="defaultBody" id="welcome">
             <h1>Take off your shoes, stay a while!</h1>
             <p>
                 I want my site to be like a library, somewhere you can find exactly what you're looking for while still giving you
@@ -51,12 +51,14 @@
             <figure><img src="/home/media/P1.JPG" id="p1" /></figure>
             <figure><img src="/home/media/fav albums 6-10-21.png" id="albums" /></figure>
             <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
+            <figure><img src="/home/media/ice.JPG" id="ice" /></figure>
         </aside>
         <aside class="collage" id="rightCollage">
             <figure><img src="/home/media/Fall.JPG" id="fall" /></figure>
             <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
             <figure><img src="/home/media/L.JPG" id="station" /></figure>
-
+            <figure><img src="/home/media/island.JPG" id="island" /></figure>
+            <figure><img src="/home/media/vaccine.JPG" id="p3" /></figure>
         </aside>
     </div>
 </body>
