Added bumpers to all pages

--- a/favorites.html
+++ b/favorites.html
@@ -11,49 +11,56 @@
   <script src="javascript/script.js"></script>
 </head>
 <body class="default">
-  <div id="wrapper">
-  <nav class="dropdownNav">
-    <ul id="linkListHolder">
-      <li class="dropdownLinks"><a href="/home">Home</a></li>
-      <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
-      <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
-      <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
-    </ul>
-  </nav>
-  <header class="defaultBody" id="favoritesHeader">
-    <h1>Top Tier Media</h1>
-    <p>I've created a ton of stuff in my lifetime, but I've also consumed probably ten times as much.
-        Here I'd like to compile a list of all the media I've experienced, will experience, and am 
-        currently experiencing. I'll list my favorites and if anything catches your eye, I encourage 
-        you to check them out if you're anything like me.</p>
-  </header>
+    <div id="wrapper">
+        <nav class="dropdownNav">
+            <ul id="linkListHolder">
+                <li class="dropdownLinks"><a href="/home">Home</a></li>
+                <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
+                <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
+                <li class="dropdownLinks"><a href="favorites.html">Top Tier Media</a></li>
+            </ul>
+        </nav>
+        <header class="defaultBody" id="favoritesHeader">
+            <h1>Top Tier Media</h1>
+            <p>
+                I've created a ton of stuff in my lifetime, but I've also consumed probably ten times as much.
+                Here I'd like to compile a list of all the media I've experienced, will experience, and am
+                currently experiencing. I'll list my favorites and if anything catches your eye, I encourage
+                you to check them out if you're anything like me.
+            </p>
+        </header>
 
-  <hr>
-    <main class="defaultBody">
-        <div>
-            <h1>Reading</h1>
-            <h2>Books</h2>
-        </div>
-        <div>
-            <h1>Watching</h1>
-            <h2>Movies</h2>
-            <h2>TV Shows</h2>
-            <h2>YouTube Shows/Channels</h2>
-        </div>
-        <div>
-            <h1>Experiencing</h1>
-            <h2>Games</h2>
-        </div>
-    </main>
-  <aside>
-      <figure><img src="/home/media/Chicago.JPG" /></figure>
-      <figure><img src="/home/media/Fall.JPG" /></figure>
-      <figure><img src="/home/media/fav albums 6-10-21.png" /></figure>
-      <figure><img src="/home/media/L.JPG" /></figure>
-      <figure><img src="/home/media/P1.JPG" /></figure>
-      <figure><img src="/home/media/P2.JPG" /></figure>
-      <figure><img src="/home/media/Pup.jpg" /></figure>
-  </aside>
-  </div>
+        <hr>
+        <main class="defaultBody">
+            <div>
+                <h1>Reading</h1>
+                <h2>Books</h2>
+            </div>
+            <div>
+                <h1>Watching</h1>
+                <h2>Movies</h2>
+                <h2>TV Shows</h2>
+                <h2>YouTube Shows/Channels</h2>
+            </div>
+            <div>
+                <h1>Experiencing</h1>
+                <h2>Games</h2>
+            </div>
+        </main>
+        <aside class="collage" id="leftCollage">
+            <figure><img src="/home/media/Chicago.JPG" id="chicago" /></figure>
+            <figure><img src="/home/media/P1.JPG" id="p1" /></figure>
+            <figure><img src="/home/media/fav albums 6-10-21.png" id="albums" /></figure>
+            <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
+            <figure><img src="/home/media/ice.JPG" id="ice" /></figure>
+        </aside>
+        <aside class="collage" id="rightCollage">
+            <figure><img src="/home/media/Fall.JPG" id="fall" /></figure>
+            <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
+            <figure><img src="/home/media/L.JPG" id="station" /></figure>
+            <figure><img src="/home/media/island.JPG" id="island" /></figure>
+            <figure><img src="/home/media/vaccine.JPG" id="p3" /></figure>
+        </aside>
+    </div>
 </body>
 </html>
