--- a/resume.html
+++ b/resume.html
@@ -288,6 +288,13 @@
                 </ul>
             </div>
         </div>
+
+        <aside class="collage" id="leftCollage">
+            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
+        </aside>
+        <aside class="collage" id="rightCollage">
+            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
+        </aside>
     </div>
 </body>
 </html>
