Included favorite table

--- a/favorites.html
+++ b/favorites.html
@@ -35,6 +35,19 @@
             <div>
                 <h1>Reading</h1>
                 <h2>Books</h2>
+                <table>
+                    <tr>
+                        <th>Ready</th>
+                        <th>Work in Progress</th>
+                        <th>Complete</th>
+                    </tr>
+                    <tr>
+                        <td>Dune - Frank Herbert<br />
+                        The Passage - Justin Cronin</td>
+                        <td>Landscape Painted With Tea - Milorad Pavic</td>
+                        <td>The Book Thief - Markus Zusak</td>
+                    </tr>
+                </table>
             </div>
             <div>
                 <h1>Watching</h1>
