--- a/resume.html
+++ b/resume.html
@@ -261,7 +261,7 @@
                     <li>JSON</li>
                     <li>GitHub</li>
                     <li>SQL</li>
-                    <li>OCaml></li>
+                    <li>OCaml</li>
                     <li>Cucumber</li>
                     <li>PHP</li>
                     <li>XML</li>
@@ -290,10 +290,10 @@
         </div>
 
         <aside class="collage" id="leftCollage">
-            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
+            <!--<figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>-->
         </aside>
         <aside class="collage" id="rightCollage">
-            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
+            <!--<figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>-->
         </aside>
     </div>
 </body>
