Properly styling borders on resume

--- a/resume.html
+++ b/resume.html
@@ -290,10 +290,12 @@
         </div>
 
         <aside class="collage" id="leftCollage">
-            <!--<figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>-->
+            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
+            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
         </aside>
         <aside class="collage" id="rightCollage">
-            <!--<figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>-->
+            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
+            <figure><img src="/home/media/Bluetitlecard.png" id="bluepattern" /></figure>
         </aside>
     </div>
 </body>
