Restyled casual margins

--- a/favorites.html
+++ b/favorites.html
@@ -67,6 +67,7 @@
             <figure><img src="/home/media/Pup.jpg" id="pup" /></figure>
         </aside>
         <aside class="collage" id="rightCollage">
+            <figure><img src="/home/media/ice.JPG" /></figure>
             <figure><img src="/home/media/Fall.JPG" id="fall" /></figure>
             <figure><img src="/home/media/P2.JPG" id="p2" /></figure>
             <figure><img src="/home/media/L.JPG" id="station" /></figure>
