--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="defaultBody">
             <div id="intro">
                 <h1>Home</h1>
-                <p>Patrick Crowe</p>
+                <p style="text-align: center">Patrick Crowe</p>
                 <p>25% Music Fan</p>
                 <p>25% Tech Wizard</p>
                 <p>25% Interior Gardener</p>
