Added under construction messages

--- a/favorites.html
+++ b/favorites.html
@@ -52,12 +52,16 @@
             <div>
                 <h1>Watching</h1>
                 <h2>Movies</h2>
+                <p>Under construction</p>
                 <h2>TV Shows</h2>
+                <p>Under construction</p>
                 <h2>YouTube Shows/Channels</h2>
+                <p>Under construction</p>
             </div>
             <div>
                 <h1>Experiencing</h1>
                 <h2>Games</h2>
+                <p>Under Construction</p>
             </div>
         </main>
         <aside class="collage" id="leftCollage">
