--- a/favorites.html
+++ b/favorites.html
@@ -62,7 +62,7 @@
                 <h1>Experiencing</h1>
                 <h2>Games</h2>
                 <p>Under Construction</p>
-                <p><a href="https://pcrowe22.github.io/Bibliotech/binary2.0.html">Psst, I built a "game"</a>It's only partially complete, but give it a try. It uses JavaScript.</p>
+                <p><a href="https://pcrowe22.github.io/Bibliotech/binary2.0.html">Psst, I built a "game"!</a> It's only partially complete, but give it a try. It uses JavaScript.</p>
             </div>
         </main>
         <aside class="collage" id="leftCollage">
