Added music section to favorites

--- a/favorites.html
+++ b/favorites.html
@@ -65,6 +65,13 @@
                 <p><a href="https://pcrowe22.github.io/Bibliotech/binary2.0.html">Psst, I built a "game"!</a></p>
                 <p>It's only partially complete, but I think it's functional enough to call it a puzzle game. I used Javascirpt to make it.</p>
             </div>
+            <div>
+                <h1>Listening</h1>
+                <h2>Podcasts</h2>
+                <p>Under construction</p>
+                <h2>Music</h2>
+                <p>Under construction</p>
+            </div>
         </main>
         <aside class="collage" id="leftCollage">
             <figure><img src="/home/media/Chicago.JPG" id="chicago" /></figure>
